<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">看帖</string>
    <string name="edit_back_msg">是否保存为草稿</string>
    <string name="please_enter_section_name">请输入要搜索的板块名</string>
    <string name="please_enter_post_subject">请输入要搜索的帖子标题</string>
    <string name="home">首页</string>
    <string name="forum">论坛</string>
    <string name="link_text">网址</string>
    <string name="share_to">分享到</string>
    <string name="skip_to_bookmark">跳到上次阅读</string>
    <string name="auto_post">抢楼</string>
    <string name="share_copy_post_url">复制贴子链接</string>
    <string name="pin_to_screen">添加到屏幕</string>
    <string name="message">消息</string>
    <string name="msg_sys">系统消息</string>
    <string name="msg_user">个人消息</string>
    <string name="person_info">个人中心</string>
    <string name="more">更多</string>
    <string name="yes">是的</string>
    <string name="no">不</string>
    <string name="save">保存</string>
    <string name="post_not_replies">没有回复啦</string>
    <string name="loading">数据加载中</string>
    <string name="reply">回复</string>
    <string name="mention_me">提到我的</string>
    <string name="private_message">私信</string>
    <string name="skip_to">跳转到</string>
    <string name="total_floor">当前{0}楼</string>
    <string name="floor_building">楼主</string>
    <string name="floor">楼</string>
    <string name="refresh">刷新</string>
    <string name="refresh_after_release">松开后刷新</string>
    <string name="refresh_after_dropdown">下拉刷新</string>
    <string name="refresh_after_tap">点击刷新</string>
    <string name="mark">马克一下</string>
    <string name="add_bookmark">收藏</string>
    <string name="add_bookmark_succeed">帖子收藏成功:)</string>
    <string name="thread_sort_last_reply">最新回复</string>
    <string name="thread_sort_last_post">最新发表</string>
    <string name="thread_sort_value">精华帖子</string>
    <string name="thread_sort_views">24小时热门帖子</string>
    
    <string name="thread_post">我发表的帖子</string>
    <string name="thread_reply">我回复的帖子</string>
    
    <string name="share">分享</string>
    <string name="my_forums">我收藏的板块</string>
    <string name="top_forums">热门板块</string>
    <string name="my_posts">我的帖子</string>
    <string name="my_bookmark">我的书签</string>
    <string name="my_gallery">我的相册</string>
    <string name="my_friends">我的好友</string>
    <string name="my_autopost">我的抢楼</string>
    <string name="post_message">写信</string>
    <string name="skip_floor">跳楼</string>
    <string name="back">返回</string>
    <string name="send">发送</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="selecte_all">全选</string>
    <string name="share_weixin_timeline">微信朋友圈</string>
    <string name="share_tieba_qunzu">贴吧群组</string>
    <string name="share_weixin">微信</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_qweibo">腾讯微博</string>
    <string name="share_sina_weibo">新浪微博</string>
    <string name="share_renren">人人网</string>
    <string name="post">发帖</string>
    <string name="quote">引用</string>
    <string name="copy">复制</string>
    <string name="copy_data_success">成功复制</string>
    <string name="show_only_user">只看该作者</string>
    <string name="show_normal_user">查看全部</string>
    <string name="post_subject_prefix">Re:</string>
    <string name="template_separator">\r\n\r\n=================我是分隔符=================\r\n\r\n</string>
    <string name="template_word_count">我是{0}字</string>
    <string name="post_subject">标题</string>
    <string name="post_body">内容</string>
    <string name="post_body_mark">mark</string>
    <string name="post_create_success">发表帖子发表了！</string>
    <string name="post_reply_success">回复帖子成功了！</string>
    <string name="post_mark_success">马克帖子成功了！</string>
    <string name="post_load_outofrang">亲~已经没有更多内容啦~</string>
    
    <string name="post_create">发表主题</string>
    <string name="post_reply">回帖:</string>
    <string name="friend_add">添加好友</string>
    <string name="friend_list">好友列表</string>
    <string name="accound_add">添加帐号</string>
    <string name="account_account">帐号</string>
    <string name="account_mobile">手机号</string>
    <string name="account_account_limit">不超过7个汉字，或14个字节(数字，字母和下划线)</string>
    <string name="account_password">密码</string>
    <string name="title_vcode">验证码</string>
    <string name="vcode_refresh">换一换</string>
    <string name="account_hint_normal">用户名/邮箱</string>
    <string name="account_login">登录</string>
    <string name="account_login_loading">登录…</string>
    <string name="account_password_limit">6～14个字符(字母区分大小写)</string>
    <string name="account_apassword">确认密码</string>
    <string name="account_male">男</string>
    <string name="account_female">女</string>
    <string name="account_manage">帐号管理</string>
    <string name="autopost_manage">抢楼管理</string>
    <string name="account_protocol">协议条款</string>
    <string name="title_login">登录天涯帐号</string>
    <string name="account_regedit">注册</string>
    <string name="login_msg_tab">登录后即可查阅你的消息提醒</string>
    <string name="login_person_tab">登录后可查看你的帐号资料</string>
    <string name="login_to_use">登录后即可使用该功能</string>
    <string name="edit">编辑</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="about">关于</string>
    <string name="other">其它</string>
    <string name="account">帐号</string>
    <string name="settings">设置</string>
    <string name="msg_remind">消息提醒</string>
    <string name="remind_enable">开启提醒</string>
    <string name="remind_type">提醒类型</string>
    <string name="sound_enable">声音提醒</string>
    <string name="vibrate_enable">振动提醒</string>
    <string name="browsing_settings">浏览设置</string>
    <string name="font_size">正文字体大小</string>
    <string name="font_size_big">巨大</string>
    <string name="font_size_mid">偏大</string>
    <string name="font_size_small">正常</string>
    <string name="show_image">自动下载图片</string>
    <string name="show_head_img">自动下载头像</string>
    <string name="clear_cache">瘦身一下</string>
    <string name="clear_cache_desc">清理程序在运行过程中产生的各种垃圾</string>
    <string name="selecte">选择</string>
    <string name="camera">拍照</string>
    <string name="local_gallery">本地相册</string>
    <string name="remote_gallery">网络相册</string>
    <string name="pagination_nomore_message">消息已拉取完毕</string>

    <string name="aotupost_settings">设置抢楼</string>
    <string name="aotupost_settings_auto_rule">设置抢楼规则</string>
    <string name="aotupost_settings_user_rule">设置抢楼用户</string>
    <string name="autopost_start_time">设置开始时间</string>
    <string name="autopost_end_time">设置结束时间</string>
    <string name="autopost_floor_enable">是否需要指定楼层</string>
    <string name="autopost_floor">指定楼层</string>
    <string name="autopost_accounts">指定用户</string>
    <string name="autopost_postbody">回复内容</string>
    <string name="autopost_all_user">选中所有用户</string>
    <string name="autopost_selected_user">选中部分用户</string>
</resources>