<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
	<PreferenceCategory android:title="@string/account" android:key="account_category" android:layout="@layout/prefs_category_widget">
	   <PreferenceScreen android:title="@string/account_manage"  android:key="account_manage" android:layout="@layout/perfs_item" />
	   <PreferenceScreen android:title="@string/autopost_manage"  android:key="autopost_manage" android:layout="@layout/perfs_item" />
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/msg_remind" android:key="msg_category" android:layout="@layout/prefs_category_widget">
	   <CheckBoxPreference android:order="1" android:persistent="false" android:title="@string/remind_enable" android:key="remind_enable" android:layout="@layout/perfs_item" />	    
	   <apollo.preference.MultiSelectListPreference android:order="2" android:persistent="false" android:entries="@array/remind_entries" android:title="@string/remind_type" android:key="remind_mode" android:entryValues="@array/remind_values" android:layout="@layout/perfs_item" />
       <CheckBoxPreference android:order="3" android:persistent="false" android:title="@string/sound_enable" android:key="sound_enable" android:layout="@layout/perfs_item" />
       <CheckBoxPreference android:order="4" android:persistent="false" android:title="@string/vibrate_enable" android:key="vibrate_enable" android:layout="@layout/perfs_item"   />
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/browsing_settings" android:key="browsing_category" android:layout="@layout/prefs_category_widget">
		<ListPreference android:persistent="false" android:title="@string/font_size" android:key="font_size" android:order="1" android:entries="@array/font_entries" android:layout="@layout/perfs_item"  android:entryValues="@array/font_values" />
		<CheckBoxPreference android:persistent="false" android:title="@string/show_image" android:key="show_image" android:order="2" android:layout="@layout/perfs_item"   />
		<CheckBoxPreference android:persistent="false" android:title="@string/show_head_img" android:key="show_head_img" android:order="3" android:layout="@layout/perfs_item"  />
	</PreferenceCategory>
	
	
	<PreferenceCategory android:title="@string/other" android:key="other_category" android:layout="@layout/prefs_category_widget">
	    <Preference android:persistent="false"  android:title="@string/clear_cache" android:summary="@string/clear_cache_desc" android:key="clear_cache" android:layout="@layout/perfs_item" />
	   <PreferenceScreen android:title="@string/about" android:layout="@layout/perfs_item" >
	       <intent android:targetPackage="apollo.app" android:targetClass="apollo.app.AccountActivity" />
        </PreferenceScreen>
	</PreferenceCategory>
	

</PreferenceScreen>