<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="@color/share_to" android:gravity="center_vertical" android:background="@drawable/bg_unite_popup_share_up" android:paddingLeft="15.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/share_to" />
    <LinearLayout android:orientation="vertical"  android:background="@drawable/bg_dailog" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal"  android:paddingLeft="@dimen/ds44" android:paddingTop="@dimen/ds60" android:paddingRight="@dimen/ds44" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/ds28" android:textColor="@color/share_to" android:gravity="center_horizontal" android:id="@id/iconWeixinTimeline" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_weixin_timeline" android:drawableTop="@drawable/icon_unite_share_friend" android:drawablePadding="@dimen/ds26" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/ds28" android:textColor="@color/share_to" android:gravity="center_horizontal" android:id="@id/iconWeixin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_weixin" android:drawableTop="@drawable/icon_unite_share_weixin" android:drawablePadding="@dimen/ds26" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/ds28" android:textColor="@color/share_to" android:gravity="center_horizontal" android:id="@id/iconQZone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_qzone" android:drawableTop="@drawable/icon_unite_share_qqzon" android:drawablePadding="@dimen/ds26" android:layout_weight="1.0" />
        	<TextView android:textSize="@dimen/ds28" android:textColor="@color/share_to" android:gravity="center_horizontal" android:id="@id/iconSinaWeibo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_sina_weibo" android:drawableTop="@drawable/icon_unite_share_sina" android:drawablePadding="@dimen/ds26" android:layout_weight="1.0" />
            
        </LinearLayout>
        <LinearLayout android:visibility="gone" android:orientation="horizontal" android:paddingLeft="@dimen/ds44" android:paddingRight="@dimen/ds44" android:paddingBottom="@dimen/ds44" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ds44">
            <TextView android:textSize="@dimen/ds28" android:textColor="@color/share_to" android:gravity="center_horizontal" android:id="@id/iconSinaWeibo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_sina_weibo" android:drawableTop="@drawable/icon_unite_share_sina" android:drawablePadding="@dimen/ds26" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/ds28" android:textColor="@color/share_to" android:gravity="center_horizontal" android:id="@id/iconRenren" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_renren" android:drawableTop="@drawable/icon_unite_share_renren" android:drawablePadding="@dimen/ds26" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/ds28" android:textColor="@color/share_to" android:gravity="center_horizontal" android:id="@id/gone" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_renren" android:drawableTop="@drawable/icon_unite_share_renren" android:drawablePadding="@dimen/ds26" android:layout_weight="1.0" />
        	<TextView android:textSize="@dimen/ds28" android:textColor="@color/share_to" android:gravity="center_horizontal" android:id="@id/gone" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_renren" android:drawableTop="@drawable/icon_unite_share_renren" android:drawablePadding="@dimen/ds26" android:layout_weight="1.0" />
        
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" />
        <View android:background="@color/cp_bg_line_b" android:layout_width="fill_parent" android:layout_height="@dimen/ds2" android:layout_marginLeft="@dimen/ds40" android:layout_marginRight="@dimen/ds40" />
        <Button android:textSize="@dimen/ds32" android:textColor="@color/share_to" android:id="@id/ok" android:background="@drawable/btn_blue_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/ds100" android:layout_marginLeft="@dimen/ds40" android:layout_marginTop="@dimen/ds50" android:layout_marginRight="@dimen/ds40" android:text="@string/share_copy_post_url" />
        <Button android:textSize="@dimen/ds32" android:textColor="@color/share_to" android:id="@id/cancel" android:background="@drawable/btn_w_square" android:layout_width="fill_parent" android:layout_height="@dimen/ds100" android:layout_marginLeft="@dimen/ds40" android:layout_marginTop="@dimen/ds20" android:layout_marginRight="@dimen/ds40" android:layout_marginBottom="@dimen/ds40" android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>