<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/backgroundcolor" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:textSize="15.0sp" android:textColor="@color/write_color" android:textColorHint="@color/write_hint_color" android:id="@id/post_subject" android:background="@drawable/write_title_bg" android:paddingLeft="7.0dip" android:paddingRight="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="4.0dip" android:layout_marginBottom="5.0dip" android:hint="@string/post_subject" android:singleLine="true" android:maxLength="31" android:layout_below="@id/layout_top" />
    <EditText android:textSize="15.0sp" android:textColor="@color/write_color" android:textColorHint="@color/write_hint_color" android:gravity="fill_horizontal|top|center" android:id="@id/post_body" android:background="@drawable/write_content_bg" android:paddingLeft="7.0dip" android:paddingTop="5.0dip" android:paddingRight="7.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="4.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="4.0dip" android:hint="@string/post_body" android:maxLength="5000" android:layout_above="@id/tools" android:layout_below="@id/post_subject" />
    <View android:id="@id/hold" android:layout_width="1.0dip" android:layout_height="1.0dip" android:layout_marginBottom="-1.0dip" android:layout_alignParentBottom="true" />
    <GridView android:gravity="center" android:id="@id/face_view" android:background="@drawable/write_face_bg" android:focusable="false" android:visibility="gone" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="220.0dip" android:horizontalSpacing="5.0dip" android:verticalSpacing="5.0dip" android:stretchMode="columnWidth" android:columnWidth="50.0dip" android:numColumns="auto_fit" android:layout_above="@id/hold" />
    <RelativeLayout android:id="@id/tools" android:background="@drawable/write_tools_bg" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_above="@id/face_view">
        <FrameLayout android:layout_width="45.0dip" android:layout_height="45.0dip" android:layout_alignParentLeft="true">
            <ImageView android:id="@id/image" android:paddingLeft="3.0dip" android:paddingTop="3.0dip" android:paddingRight="3.0dip" android:paddingBottom="3.0dip" android:focusable="false" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerInside" android:layout_centerVertical="true" />
            <ProgressBar android:layout_gravity="center" android:id="@id/image_progress" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminateDrawable="@drawable/progressbar" style="?android:attr/progressBarStyleSmall" />
        </FrameLayout>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true">
            <ImageView android:id="@id/select_face" android:padding="8.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/write_face" android:scaleType="center" />
            <ImageView android:id="@id/select_follow" android:padding="8.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/write_at" android:scaleType="center" />
            <ImageView android:id="@id/select_image" android:padding="8.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/write_image" android:scaleType="center" />
        	<ImageView android:id="@id/select_w200" android:padding="8.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/write_w200" android:scaleType="center" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout android:id="@id/layout_top" android:background="@drawable/title_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" style="@style/title_margin">
        <Button android:layout_gravity="center_vertical" android:id="@id/back" android:background="@drawable/title_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" style="@style/comm_controls" />
        <TextView android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/top_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1.0" style="@style/title_info" />
        <Button android:layout_gravity="center_vertical" android:id="@id/post" android:background="@drawable/title_comm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/post" style="@style/comm_controls" />
    </LinearLayout>
</RelativeLayout>
